--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.0",
     "expo": "~37.0.3",
     "expo-font": "~8.1.0",
     "react": "~16.9.0",
@@ -17,7 +18,8 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "3.11.1"
+    "react-navigation": "3.11.1",
+    "react-navigation-header-buttons": "^6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
