--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-paper": "^4.6.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "3.11.1",
-    "react-navigation-header-buttons": "^6.0.2"
+    "react-navigation-header-buttons": "^6.0.2",
+    "react-navigation-material-bottom-tabs": "^2.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
