--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "3.11.1",
     "react-navigation-header-buttons": "^6.0.2",
-    "react-navigation-material-bottom-tabs": "^2.3.3"
+    "react-navigation-material-bottom-tabs": "^2.3.3",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
